[gd_scene load_steps=9 format=3 uid="uid://drgptv3pxrnyk"]

[ext_resource type="Texture2D" uid="uid://dnnkb7wtqthx1" path="res://Art/pickup notification.png" id="1_nk480"]
[ext_resource type="Script" path="res://Scripts/ui & inventory/pickup_notification.gd" id="1_o7g8h"]
[ext_resource type="PackedScene" uid="uid://dj4uo1mrdxxha" path="res://Scenes/shadow_sprite.tscn" id="3_f018d"]
[ext_resource type="FontFile" uid="uid://crd6qgr13h034" path="res://PixelRPG.ttf" id="3_x7y3d"]
[ext_resource type="Texture2D" uid="uid://bpp02gt4ei5wv" path="res://Art/shadow spill cover.png" id="4_gys05"]
[ext_resource type="FontFile" uid="uid://c2it3k3fijg8r" path="res://stardew numbers font.png" id="6_vv5an"]
[ext_resource type="Script" path="res://Scripts/tweens/tween_bounce.gd" id="7_naelw"]

[sub_resource type="FontVariation" id="FontVariation_rh8oi"]
base_font = ExtResource("6_vv5an")
spacing_glyph = -1

[node name="PickupNotification" type="Control"]
custom_minimum_size = Vector2(96, 25)
layout_mode = 3
anchors_preset = 0
offset_right = 96.0
offset_bottom = 25.0
script = ExtResource("1_o7g8h")

[node name="BoxSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_nk480")
centered = false
hframes = 3

[node name="StretchSprite" type="Sprite2D" parent="."]
position = Vector2(22, 0)
texture = ExtResource("1_nk480")
centered = false
hframes = 3
frame = 1

[node name="EndCapSprite" type="Sprite2D" parent="."]
position = Vector2(44, 0)
texture = ExtResource("1_nk480")
centered = false
hframes = 3
frame = 2

[node name="PickupText" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 8.0
offset_right = 65.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.760784, 0.521569, 0.411765, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_x7y3d")
theme_override_font_sizes/font_size = 8
text = "iron axe"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(3, 5)

[node name="ShadowSprite" parent="Node2D" instance=ExtResource("3_f018d")]
unique_name_in_owner = true

[node name="ShadowSpillCover" type="Sprite2D" parent="."]
position = Vector2(3, 5)
texture = ExtResource("4_gys05")
centered = false
offset = Vector2(-3, -4)

[node name="PickupQuantity" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 17.0
offset_right = 22.0
offset_bottom = 27.0
theme_override_fonts/font = SubResource("FontVariation_rh8oi")
text = "999"
horizontal_alignment = 2

[node name="BounceTween" type="Node2D" parent="."]
script = ExtResource("7_naelw")
drop_height = 15.0
